scripts/single_sample_method_benchmarking/slurm_jobs/logs/err_nanostring_cosmx_human_nsclc_subsample_1pct_batch5_nichecompass_gcnconv_single_sample_method_benchmarking_1.txt
  File "/home/aih/sebastian.birk/workspace/projects/nichecompass-reproducibility/scripts/single_sample_method_benchmarking/../train_nichecompass_benchmarking_models.py", line 746
    model = NicheCompass(adata,
                         ^
SyntaxError: keyword argument repeated: n_layers_encoder
